--- a/src/main/webapp/resources/template/commonFooter.xhtml
+++ b/src/main/webapp/resources/template/commonFooter.xhtml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html">
 <body>
 <ui:composition>
-
     <p>This is default footer</p>
-
+    <p>Project details: <h:outputLabel value="#{appInfoProvider.manifestEntries}"/></p>
 </ui:composition>
 </body>
 </html>
