--- a/src/main/webapp/resources/template/commonFooter.xhtml
+++ b/src/main/webapp/resources/template/commonFooter.xhtml
@@ -3,8 +3,16 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html">
 <body>
 <ui:composition>
-    <p>This is default footer</p>
-    <p>Project details: <h:outputLabel value="#{appInfoProvider.manifestEntries}"/></p>
+    <footer class="panel-footer">
+        <p>This is default footer</p>
+
+        <div class="form-inline">
+            <h:outputText styleClass="form-control" value="#{helloBean.appInfo.buildDate}"/>
+            <h:outputText styleClass="form-control" value="#{helloBean.appInfo.appVersion}"/>
+            <h:outputText styleClass="form-control" value="#{helloBean.appInfo.activeProfiles}" />
+        </div>
+
+    </footer>
 </ui:composition>
 </body>
 </html>
