--- a/src/main/webapp/resources/template/commonHeader.xhtml
+++ b/src/main/webapp/resources/template/commonHeader.xhtml
@@ -5,7 +5,18 @@
 <body>
 <ui:composition>
 
-    <p>This is the JSF 2 helloworld application!</p>
+    <nav class="navbar navbar-default" role="navigation">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="#">Header</a>
+        </div>
+    </nav>
 
 </ui:composition>
 </body>
