--- a/src/main/webapp/resources/template/commonLayout.xhtml
+++ b/src/main/webapp/resources/template/commonLayout.xhtml
@@ -8,6 +8,7 @@
 <h:head>
     <h:outputStylesheet library="css" name="bootstrap.min.css"/>
     <h:outputStylesheet library="css" name="bootstrap-theme.min.css"/>
+    <h:outputStylesheet library="css" name="helloworld.css"/>
 
     <title><ui:insert name="title"/></title>
 </h:head>
