--- a/src/main/webapp/resources/template/commonFooter.xhtml
+++ b/src/main/webapp/resources/template/commonFooter.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:h="http://java.sun.com/jsf/html">
 <body>
 <ui:composition>
-    <footer class="panel-footer">
+    <p></p>
+    <div class="panel-footer">
         <p>This is default footer</p>
 
         <div class="form-inline">
@@ -12,7 +13,7 @@
             <h:outputText styleClass="form-control" value="#{helloBean.appInfo.activeProfiles}" />
         </div>
 
-    </footer>
+    </div>
 </ui:composition>
 </body>
 </html>
